After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 781902 - cally: Fix translation to screen coordinates
cally: Fix translation to screen coordinates
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2017-04-28 15:20 UTC by Florian Müllner
Modified: 2017-05-02 12:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
cally: Fix translation to screen coordinates (1.01 KB, patch)
2017-04-28 15:20 UTC, Florian Müllner
committed Details | Review
cally: Fix compilation without X11 backend (1.34 KB, patch)
2017-04-28 20:40 UTC, Florian Müllner
committed Details | Review

Description Florian Müllner 2017-04-28 15:20:35 UTC
See patch.
Comment 1 Florian Müllner 2017-04-28 15:20:39 UTC
Created attachment 350652 [details] [review]
cally: Fix translation to screen coordinates

Due to an accidental swap of an else statement and a preprocessor #else,
the output x coordinate is currently only set when not using the X11
windowing system, whoops.
Comment 2 Rui Matos 2017-04-28 15:36:45 UTC
Review of attachment 350652 [details] [review]:

obviously right :-/
Comment 3 Florian Müllner 2017-04-28 15:39:42 UTC
Attachment 350652 [details] pushed as 0fd9e38 - cally: Fix translation to screen coordinates
Comment 4 Florian Müllner 2017-04-28 20:40:47 UTC
Created attachment 350685 [details] [review]
cally: Fix compilation without X11 backend

Commit 0fd9e38175 fixed setting the out parameter for the x coordinate
when using the X11 backend, but broke compilation when the backend is
not available ...
Really fix the issue by running the X11-specific code when the X11
backend is available and in use, and display the one-time warning
otherwise.
Comment 5 Florian Müllner 2017-04-28 20:41:43 UTC
Meh, sorry I messed this up.
Comment 6 Rui Matos 2017-05-02 09:51:04 UTC
Review of attachment 350685 [details] [review]:

*sigh* yeah it seems better this way

can you even build without the X backend though?
Comment 7 Florian Müllner 2017-05-02 12:31:22 UTC
Attachment 350685 [details] pushed as 9cf8aa4 - cally: Fix compilation without X11 backend

I would be surprised if building without the X11 backend worked, but haven't tried. Still, it doesn't feel right to replace one bug with another one :-)